
Toggleable Options
- Intrinsicswap: Gaining a resistance other than poison resistance through food
  will cause you to lose your other resistances. False by default.
- Deaf: A roleplay option and conduct that allows you to play a deaf character.
- Hallucinating: A roleplay option and conduct that allows you to play a
  permanently hallucinating character. Using an artifact to gain hallucination
  resistance will break this.

General Changes
- Deadly poison is no longer an instant kill, and instead does 1-13 extra
  damage. This change does not affect monsters.
- Monsters are now capable of sacrificing corpses on altars, and all monsters
  that like objects will now pick up corpses (as opposed to just nymphs).
  In rare cases, this can result in monsters being gifted artifacts.
- If a monster on the Astral Plane somehow obtains the Amulet of Yendor and
  makes it to an altar, they will attempt to sacrifice it and gain immortality,
  causing an instant loss.
- Increased number of player monsters in the endgame.
- Player monsters no longer spawn with offensive items, making them much more
  likely to employ their artifacts. Player monsters also have a larger variety
  of artifacts that they can spawn with. Their abilities have been diversified
  somewhat, but all of them are now capable of stealing the amulet with their
  attacks.
- Upon stealing the amulet, if in the endgame a monster will try to flee.
- Decreased floating eye spawn rate to make blind telepathy harder to obtain.
- Mysterious force now only affects you when you are hallucinating (you
  suddenly hallucinate that you are playing vanilla Nethack!)
- There are different descriptions for venom which are randomized each game.
  This may break realism slightly, but does help with distinguishing what kind
  of venom an unfamiliar monster might be spitting.
- Tigers now are colored orange, in order to make room for lions, which are
  colored yellow.