@@ -23,6 +23,9 @@
 # Some options are persistent, and apply only to new games.
 #
 # For more information about the options, see the Guidebook.
+#
+# Edited on 4/08/18 by NullCGT
+#
 
 
 # Set your character's name.
@@ -79,6 +82,12 @@
 # Conduct/Role-playing: starts with no worn armor.
 # Wearing any armor will make you lose this conduct
 #OPTIONS=nudist
+# Conduct/Role-playing: deaf from birth.
+#OPTIONS=deaf
+# Conduct/Role-playing: hallucinating from birth.
+#OPTIONS=hallucinating
+# Conduct/Role-playing: fumbling from birth.
+#OPTIONS=clumsy
 
 # Disable loading and saving of bones files
 #OPTIONS=!bones
@@ -134,6 +143,9 @@
 
 # Always show the "uncursed" for inventory objects. Useful for MENUCOLORs
 #OPTIONS=implicit_uncursed
+
+# Swap out intrinsics when eating (see changelog)
+#OPTIONS=intrinsicswap
 
 # Do not show the legacy intro text at game start
 #OPTIONS=!legacy
@@ -524,4 +536,3 @@
 #OPTIONS=statushilites
 # Use highlighting in the status lines when it changes?
 #OPTIONS=hilite_status:hitpoints/30%/bright-magenta/normal
-
