@@ -2025,8 +2025,15 @@ register struct monst *mtmp;
         wizdead();
     if (mtmp->data->msound == MS_NEMESIS)
         nemdead();
+
     if (mtmp->data == &mons[PM_MEDUSA])
         u.uachieve.killed_medusa = 1;
+    else if (mtmp->data == &mons[PM_KING_IN_YELLOW]) {
+        u.uachieve.killed_king = 1;
+    } else if (mtmp->data == &mons[PM_DEMOGORGON]) {
+        u.uachieve.killed_demogorgon = 1;
+    }
+
     if (glyph_is_invisible(levl[mtmp->mx][mtmp->my].glyph))
         unmap_object(mtmp->mx, mtmp->my);
     m_detach(mtmp, mptr);
