@@ -2,7 +2,7 @@
 /* Copyright (c) Stichting Mathematisch Centrum, Amsterdam, 1985. */
 /* NetHack may be freely redistributed.  See license for details. */
 
-/* Edited on 4/6/18 by NullCGT */
+/* Edited on 4/8/18 by NullCGT */
 
 #include "config.h"
 #include "permonst.h"
@@ -2629,6 +2629,15 @@ struct permonst _mons2[] = {
         M1_FLY | M1_BREATHLESS | M1_WALLWALK | M1_HUMANOID | M1_UNSOLID,
         M2_NOPOLY | M2_UNDEAD | M2_STALK | M2_HOSTILE, M3_INFRAVISION,
         CLR_GRAY),
+    /* Inspired by an archived YANI by AmyBSOD and aosdict */
+    MON("spectre", S_GHOST, LVL(10, 9, -8, 50, -5), (G_NOCORPSE | 1),
+        A(ATTK(AT_WEAP, AD_PHYS, 1, 10), NO_ATTK, NO_ATTK, NO_ATTK, NO_ATTK,
+          NO_ATTK),
+        SIZ(WT_HUMAN, 0, MS_SILENT, MZ_HUMAN),
+        MR_COLD | MR_DISINT | MR_SLEEP | MR_POISON | MR_STONE, 0,
+        M1_FLY | M1_BREATHLESS | M1_WALLWALK | M1_HUMANOID | M1_UNSOLID,
+        M2_NOPOLY | M2_UNDEAD | M2_STALK | M2_HOSTILE, M3_INFRAVISION,
+        CLR_BRIGHT_BLUE),
     MON("shade", S_GHOST, LVL(12, 10, 10, 0, 0), (G_NOCORPSE | G_NOGEN),
         A(ATTK(AT_TUCH, AD_PLYS, 2, 6), ATTK(AT_TUCH, AD_SLOW, 1, 6), NO_ATTK,
           NO_ATTK, NO_ATTK, NO_ATTK),
