@@ -2,7 +2,7 @@
 /* Copyright (c) Stichting Mathematisch Centrum, Amsterdam, 1985. */
 /* NetHack may be freely redistributed.  See license for details. */
 
-/* Edited on 4/7/18 by NullCGT */
+/* Edited on 4/8/18 by NullCGT */
 
 #ifdef OPTION_LISTS_ONLY /* (AMIGA) external program for opt lists */
 #include "config.h"
@@ -102,6 +102,7 @@ static struct Bool_Opt {
     { "checkspace", (boolean *) 0, FALSE, SET_IN_FILE },
 #endif
     { "clicklook", &iflags.clicklook, FALSE, SET_IN_GAME },
+    { "clumsy", &u.uroleplay.clumsy, FALSE, DISP_IN_GAME },
     { "cmdassist", &iflags.cmdassist, TRUE, SET_IN_GAME },
 #if defined(MICRO) || defined(WIN32)
     { "color", &iflags.wc_color, TRUE, SET_IN_GAME }, /*WC*/
@@ -139,6 +140,7 @@ static struct Bool_Opt {
     { "hilite_pile", &iflags.hilite_pile, FALSE, SET_IN_GAME },
     { "hitpointbar", &iflags.wc2_hitpointbar, FALSE, SET_IN_GAME }, /*WC2*/
     { "intrinsicswap", &flags.intrinsicswap, FALSE, DISP_IN_GAME },
+    { "ill-fated", &u.uroleplay.illfated, FALSE, DISP_IN_GAME },
 #ifndef MAC
     { "ignintr", &flags.ignintr, FALSE, SET_IN_GAME },
 #else
