@@ -2,7 +2,7 @@
 /* Copyright (c) Stichting Mathematisch Centrum, Amsterdam, 1985. */
 /* NetHack may be freely redistributed.  See license for details. */
 
-/* Edited on 3/9/18 by NullCGT */
+/* Edited on 4/7/18 by NullCGT */
 
 #include "hack.h"
 
@@ -856,6 +856,7 @@ register struct obj *otmp;
         }
         if (Hallucination) {
             You("are shocked back to your senses!");
+            u.uroleplay.hallu = FALSE;
             (void) make_hallucinated(0L, FALSE, 0L);
         }
         break;
